apps/books/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: books
  labels:
    name: books
