apps/books/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: books
  namespace: books
spec:
  tls:
  - hosts:
      - "*.home.nikic.org"
    secretName: media-server
  rules:
  - host: "manga.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fmd 
            port:
              number: 3000
  - host: "books.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: readarr 
            port:
              number: 8787
  - host: "calibre.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre 
            port:
              number: 8080
  - host: "shelf.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre 
            port:
              number: 8083
  - host: "read.home.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: komga 
            port:
              number: 25600
